Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24744

flickr3d example on Linux: OpenGL resource leak

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.7.0
    • Qt3D 1.0
    • Qt3D
    • None
    • Qt5 commit 3e8422634d3e9cc5a70129654c86a3be0bce0ac2
      Linux 2.6.32-38-generic-pae #83-Ubuntu SMP Wed Jan 4 12:11:13 UTC 2012 i686 GNU/Linux

    Description

      flickr3d example issues the following errors on close:

      OPENGL RESOURCE LEAK: texture 'file:///.../resources/demos/flickr3d/qml/default_sky_west.png' has non-released resources:
        id = 2
      OPENGL RESOURCE LEAK: texture 'file:///.../resources/demos/flickr3d/qml/default_sky_up.png' has non-released resources:
        id = 5
      OPENGL RESOURCE LEAK: texture 'file:///.../resources/demos/flickr3d/qml/default_sky_east.png' has non-released resources:
        id = 6
      OPENGL RESOURCE LEAK: texture 'file:///.../resources/demos/flickr3d/qml/default_sky_down.png' has non-released resources:
        id = 4
      OPENGL RESOURCE LEAK: texture 'file:///.../resources/demos/flickr3d/qml/default_sky_south.png' has non-released resources:
        id = 7
      OPENGL RESOURCE LEAK: texture 'file:///.../resources/demos/flickr3d/qml/default_sky_north.png' has non-released resources:
        id = 3
      Number of leaked textures: 0
      Number of leaked materials: 0
      Number of leaked nodes: 0
      Number of leaked items: 0
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sergey.dubitskiy Sergey (closed Nokia identity) (Inactive)
            z35liu Zheng Liu (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes