Fix for opengl resource leaks in flickr3d and forest examples.

Task-number: QTBUG-24744
Task-number: QTBUG-24635
Change-Id: I88e92bbd62d1b0f9ac2370197af09bb6614b1c15
Reviewed-by: Sarah Jane Smith <sarah.j.smith@nokia.com>